# paper-plane

./: .gitignore  LICENSE  README.md
ChatLib/: Package.swift
ChatLib/apple/Sources/ChatLib/: ChatClient.swift
ChatLib/apple/Sources/UniFFI/: chat.swift
ChatLib/apple/Tests/ChatLibTests/: ChatLibTests.swift
ChatLib/chat-arch/: Cargo.toml  build.rs
ChatLib/chat-arch/src/: app_context.rs  chat_msg.rs  conn.rs  dialer.rs  events.rs  file_database.rs  file_resolver.rs  handshake.rs  index_database.rs  indexer.rs  lib.rs  main.rs  message_database.rs  models.rs  peer.rs  peer_database.rs  peer_pool.rs  repository.rs  repository_manager.rs  request_queue.rs  server.rs  stream_protocol.rs  sync_engine.rs
ChatLib/chat-arch/src/proto/: chat.proto  chat.rs
ChatLib/chat-bot/: Cargo.toml
ChatLib/chat-bot/src/: main.rs
ChatLib/chat-platform/: Cargo.toml  build-ios.sh
ChatLib/chat-platform/chat/: Cargo.toml
ChatLib/chat-platform/chat/src/: lib.rs
PaperPlane/: Info.plist
PaperPlane.xcodeproj/: project.pbxproj
PaperPlane/App/: AppDelegate.swift  SceneDelegate.swift
PaperPlane/Assets.xcassets/AppIcon.appiconset/: Contents.json
PaperPlane/Helpers/: Constraints.swift
PaperPlane/Screens/: ChatViewController.swift
PaperPlane/Services/: ChatManager.swift  Dns.swift
