[package]
name = "chat-arch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
rand = "0.8.4"
sha2 = "0.10.8"
hex = "0.4.3"
bytes = "1.9.0"
tokio = { version = "1.43.0", features = ["full"] }
getrandom = "0.2.15"
futures = "0.3.31"
env_logger = "0.11.6"
tokio-yamux = "0.3.11"
log = "0.4.25"
anyhow = "1.0.95"
flume = { version = "0.11.1", features = ["async"] }
chrono = "0.4.39"
async-trait = "0.1.85"
prost = "0.13.4"
uuid = { version = "1.12.1", features = ["v4"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "macros"] }
serde = "1.0.217"

[build-dependencies]
prost-build = "0.13.4"
