[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi.workspace = true
thiserror = "1.0.64"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10.3"
clap = { version = "4.5.23", features = ["derive"] }
hkdf = "0.12.4"
rand = "0.8.4"
sha2 = "0.10.8"
async-dnssd = "0.5.1"
tokio = { version = "1.1", features = ["time", "rt", "net", "sync"] }
futures = "0.3.1"
socket2 = "0.5.8"
hex = "0.4.3"
uuid = { version = "1.12.0", features = ["v4"] }
chat-arch = { path = "../../chat-arch" }
oslog = "0.2.0"
chrono = "0.4.39"
flume = { version = "0.11.1", features = ["async"] }
env_logger = "0.11.6"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
