[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi.workspace = true
thiserror = "1.0.64"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tokio = { version = "1.1", features = ["time", "rt", "net", "sync"] }
hex = "0.4.3"
uuid = { version = "1.12.0", features = ["v4"] }
chat-arch = { path = "../../chat-arch" }
oslog = "0.2.0"
chrono = "0.4.39"
env_logger = "0.11.6"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
